o	[GF#32685] Separate code from name in the simple search. o	[GF#32711] Synchronize code and exactMatch radio buttons. o	[GF#32730] Relabel roles and associations. o	[GF#32731] Search NCIt only by default. o	[GF#32737] Change charset from iso-8859-1 to UTF-8. o	[GF#32746] Provide access to NCBO Bioportal ontology visualization widget o	[GF#32772] Improve value set accessibility. o	[GF#32779] Enhancement to Contains Search Functionality. o	[GF#32790] Add an AnnotationProperty, Description, to Terminology_Value_Set.owl o	[GF#32792] Make Advanced Search link more visible. o	[GF#32793] Extend the advanced search capability. o	[GF#32794] Implement value set entity search. o	[GF#32811] Tagging of value sets. o	[GF#32816] Migrate to LexEVSAPI 6.1. o	[GF#32836] Allow the user to download the content of a mapping. o	[GF#32769] Unable to render JSPs containing Chinese characters. o	[GF#32870] Update the content of the NCI Thesaurus subset page.